--- a/src/app/partials/registro-estudiante/registro-estudiante.component.html
+++ b/src/app/partials/registro-estudiante/registro-estudiante.component.html
@@ -40,12 +40,12 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Confirmar contraseña</mat-label>
-        <input matInput [(ngModel)]="estudiante.confirmar_password" type="{{ inputType_2 }}"
+        <input matInput [(ngModel)]="estudiante.confirm_password" type="{{ inputType_2 }}"
           placeholder="Confirma la contraseña" [disabled]="editar">
         <mat-icon matSuffix class="eye-icon" (click)="showPwdConfirmar()">{{hide_2 ? 'visibility_off' :
           'visibility'}}</mat-icon>
       </mat-form-field>
-      <div *ngIf="errors.confirmar_password" class="invalid-feedback">{{ errors.confirmar_password }}</div>
+      <div *ngIf="errors.confirm_password" class="invalid-feedback">{{ errors.confirm_password }}</div>
 
       <div class="checkbox-row">
         <mat-checkbox [(ngModel)]="estudiante.terms" (change)="validate()">
